--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,7 +35,8 @@ textarea {
   display: block;
   margin: 0px 0px;
   width: 25%;
-  line-height: 50px;
+  height: 100px;
+  line-height: 20px;
 }
 
 * {
