--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,6 +25,12 @@ label {
   margin-right: 30px;
 }
 
+pre {
+  display: block;
+  margin: 10px;
+  margin-right: 10px;
+}
+
 input {
   margin: 0px 10px;
   width: 50%;
@@ -38,6 +44,7 @@ textarea {
   height: 100px;
   line-height: 20px;
 }
+
 
 * {
   box-sizing: border-box;
