--- a/styles/globals.css
+++ b/styles/globals.css
@@ -45,6 +45,13 @@ textarea {
   line-height: 20px;
 }
 
+img {
+  border: 1px solid #ddd; /* Gray border */
+  border-radius: 4px;  /* Rounded border */
+  padding: 5px; /* Some padding */
+  width: 200px; /* Set a small width */
+  height: 200px;
+}
 
 * {
   box-sizing: border-box;
